# blackboard-sync

./: .gitignore  AGENT.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCIHECTURE.md  USAGE.md
src/: __init__.py  config.py  main.py
src/auth/: __init__.py  authenticator.py
src/crawler/: __init__.py  navigator.py  parser.py
src/downloader/: __init__.py  sync_manager.py
src/logger/: __init__.py  logger.py
src/models/: __init__.py  file_node.py
